Add rook and king pieces, progress made on check, checkmate and stalemate features.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <div><span>h</span></div>
             </div>
         </div>
+        <div id="pawn-promote-dialog">
+            <img src="" alt="" class="pawn-promote-piece">
+            <img src="" alt="" class="pawn-promote-piece">
+            <img src="" alt="" class="pawn-promote-piece">
+            <img src="" alt="" class="pawn-promote-piece">
+        </div>
         <div class="game-info-container">
 
         </div>
